fix padding on mobile

--- a/src/src/app.css
+++ b/src/src/app.css
@@ -46,6 +46,6 @@
 @media (max-width: 600px) {
   #app {
     padding: 0.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
   }
 }
